[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imessage-time-machine"
version = "0.0.1"
authors = [
  { name="Thai Villaluna", email="thaivillaluna@gmail.com" },
]
description = "A website that displays old text messages"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/thaiv28/imessage-time-machine"
